third_party/move/move-compiler-v2/tests/lambda/inline-parity/lambda_no_param.lambda.exp
// -- Model dump before bytecode pipeline
module 0xdecafbad::m {
    private fun bar(f: |()|u64): u64 {
        (f)()
    }
    private fun foo(f: |()|) {
        (f)();
        Tuple()
    }
    public fun one() {
        m::foo(closure#0m::one$lambda$1());
        Tuple()
    }
    public fun two(x: u64): u64 {
        m::bar(closure#1m::two$lambda$1(x))
    }
    private fun one$lambda$1() {
        Tuple()
    }
    private fun two$lambda$1(x: u64): u64 {
        x
    }
} // end 0xdecafbad::m

// -- Sourcified model before bytecode pipeline
module 0xdecafbad::m {
    fun bar(f: |()|u64): u64 {
        f()
    }
    fun foo(f: |()|) {
        f();
    }
    public fun one() {
        foo(|()| one$lambda$1());
    }
    public fun two(x: u64): u64 {
        bar(|()| two$lambda$1(x))
    }
    fun one$lambda$1() {
    }
    fun two$lambda$1(x: u64): u64 {
        x
    }
}


Diagnostics:
error: Calls to function values other than inline function parameters not yet implemented
  ┌─ tests/lambda/inline-parity/lambda_no_param.move:3:9
  │
3 │         f();
  │         ^^^

error: Function-typed values not yet implemented except as parameters to calls to inline functions
  ┌─ tests/lambda/inline-parity/lambda_no_param.move:7:13
  │
7 │         foo(|| {});
  │             ^^^^^

error: Calls to function values other than inline function parameters not yet implemented
   ┌─ tests/lambda/inline-parity/lambda_no_param.move:11:9
   │
11 │         f()
   │         ^^^

error: Function-typed values not yet implemented except as parameters to calls to inline functions
   ┌─ tests/lambda/inline-parity/lambda_no_param.move:15:13
   │
15 │         bar(||x)
   │             ^^^
